--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
 			<section class="container">
 				<h2 id="titulo-form">Adicionar Novo Paciente</h2>
+				<ul id="mensagem-erro"></ul>
 
 				<form id="form-adiciona">
 					<div class="grupo">
@@ -109,6 +110,8 @@
 			
 		</main>
 
-		<script src="./js/principal.js"></script>
+		<script src="./js/calculaImc.js"></script>
+		<script src="./js/form.js"></script>
+		<script src="./js/removerPaciente.js"></script>
 </body>
 </html>
